--- a/Editor/Level_Designer/unitsettings.ui
+++ b/Editor/Level_Designer/unitsettings.ui
@@ -296,7 +296,7 @@
        <string>Unit name:</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lineEdit">
+     <widget class="QLineEdit" name="leUnitName">
       <property name="geometry">
        <rect>
         <x>80</x>
@@ -354,7 +354,7 @@
        <string>Unit type:</string>
       </property>
      </widget>
-     <widget class="QComboBox" name="comboBox">
+     <widget class="QComboBox" name="cbUnitType">
       <property name="geometry">
        <rect>
         <x>80</x>
@@ -363,6 +363,21 @@
         <height>22</height>
        </rect>
       </property>
+      <item>
+       <property name="text">
+        <string>Unit (u)</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Environment object (o)</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Projectile (p)</string>
+       </property>
+      </item>
      </widget>
     </widget>
     <widget class="QGroupBox" name="groupBox_2">
@@ -404,19 +419,25 @@
       </property>
      </widget>
      <widget class="QLineEdit" name="leHPBar">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="geometry">
        <rect>
         <x>110</x>
         <y>50</y>
-        <width>391</width>
+        <width>291</width>
         <height>22</height>
        </rect>
       </property>
      </widget>
      <widget class="QPushButton" name="pbHPBar">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="geometry">
        <rect>
-        <x>510</x>
+        <x>410</x>
         <y>50</y>
         <width>93</width>
         <height>28</height>
@@ -427,19 +448,25 @@
       </property>
      </widget>
      <widget class="QLineEdit" name="leManaBar">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="geometry">
        <rect>
         <x>120</x>
         <y>80</y>
-        <width>381</width>
+        <width>281</width>
         <height>22</height>
        </rect>
       </property>
      </widget>
      <widget class="QPushButton" name="pbManaBar">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="geometry">
        <rect>
-        <x>510</x>
+        <x>410</x>
         <y>80</y>
         <width>93</width>
         <height>28</height>
@@ -462,6 +489,96 @@
        <string>Mana bar texture:</string>
       </property>
      </widget>
+     <widget class="QLabel" name="label_21">
+      <property name="geometry">
+       <rect>
+        <x>510</x>
+        <y>50</y>
+        <width>71</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Bar Height:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_22">
+      <property name="geometry">
+       <rect>
+        <x>510</x>
+        <y>80</y>
+        <width>71</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Bar Width:</string>
+      </property>
+     </widget>
+     <widget class="QSpinBox" name="sbBarH">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>590</x>
+        <y>50</y>
+        <width>71</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="maximum">
+       <number>99999</number>
+      </property>
+     </widget>
+     <widget class="QSpinBox" name="sbBarW">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>590</x>
+        <y>80</y>
+        <width>71</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="maximum">
+       <number>99999</number>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="cbShowHP">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>250</x>
+        <y>20</y>
+        <width>191</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Show HP Bar?</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="cbShowMana">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>460</x>
+        <y>20</y>
+        <width>191</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Show Mana Bar?</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QGroupBox" name="groupBox_3">
      <property name="geometry">
@@ -475,7 +592,7 @@
      <property name="title">
       <string>Other options</string>
      </property>
-     <widget class="QCheckBox" name="cbHasBars_2">
+     <widget class="QCheckBox" name="cbUnitMelee">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -488,7 +605,7 @@
        <string>Unit is melee?</string>
       </property>
      </widget>
-     <widget class="QCheckBox" name="cbHasBars_3">
+     <widget class="QCheckBox" name="cbHasBuffs">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -521,7 +638,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>Browse</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_13">
@@ -557,7 +674,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>Browse</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_14">
@@ -606,7 +723,43 @@
        </rect>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>Browse</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pbPhysicsBrowse">
+      <property name="geometry">
+       <rect>
+        <x>430</x>
+        <y>210</y>
+        <width>81</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Browse</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_20">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>210</y>
+        <width>91</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Physics:</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lePhysicsLoc">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>210</y>
+        <width>321</width>
+        <height>22</height>
+       </rect>
       </property>
      </widget>
     </widget>
