--- a/Editor/Level_Designer/ui_elements.ui
+++ b/Editor/Level_Designer/ui_elements.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>695</width>
-    <height>549</height>
+    <height>538</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <x>0</x>
      <y>0</y>
      <width>691</width>
-     <height>541</height>
+     <height>531</height>
     </rect>
    </property>
    <property name="title">
@@ -50,7 +50,7 @@
       <string>Font size</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="pbTextureBrowse">
      <property name="geometry">
       <rect>
        <x>540</x>
@@ -76,7 +76,7 @@
       <string>Font location:</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_2">
+    <widget class="QPushButton" name="pbFontBrowse">
      <property name="geometry">
       <rect>
        <x>540</x>
@@ -89,7 +89,7 @@
       <string>Browse</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_2">
+    <widget class="QLineEdit" name="leFont">
      <property name="geometry">
       <rect>
        <x>100</x>
@@ -99,7 +99,7 @@
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit">
+    <widget class="QLineEdit" name="leTexture">
      <property name="geometry">
       <rect>
        <x>90</x>
@@ -122,7 +122,7 @@
       <string>Texture file:</string>
      </property>
     </widget>
-    <widget class="QSpinBox" name="spinBox">
+    <widget class="QSpinBox" name="sbFontSize">
      <property name="geometry">
       <rect>
        <x>70</x>
@@ -148,7 +148,7 @@
       <string>Location (x, y):</string>
      </property>
     </widget>
-    <widget class="QSpinBox" name="spinBox_2">
+    <widget class="QSpinBox" name="sbX">
      <property name="geometry">
       <rect>
        <x>250</x>
@@ -161,7 +161,7 @@
       <number>999999</number>
      </property>
     </widget>
-    <widget class="QSpinBox" name="spinBox_3">
+    <widget class="QSpinBox" name="sbY">
      <property name="geometry">
       <rect>
        <x>310</x>
@@ -187,7 +187,7 @@
       <string>Text placeholder location (x, y):</string>
      </property>
     </widget>
-    <widget class="QSpinBox" name="spinBox_4">
+    <widget class="QSpinBox" name="sbTextX">
      <property name="geometry">
       <rect>
        <x>190</x>
@@ -200,7 +200,7 @@
       <number>999999</number>
      </property>
     </widget>
-    <widget class="QSpinBox" name="spinBox_5">
+    <widget class="QSpinBox" name="sbTextY">
      <property name="geometry">
       <rect>
        <x>250</x>
@@ -226,7 +226,7 @@
       <string>Text placeholder size (h x w):</string>
      </property>
     </widget>
-    <widget class="QSpinBox" name="spinBox_6">
+    <widget class="QSpinBox" name="sbTextW">
      <property name="geometry">
       <rect>
        <x>250</x>
@@ -239,7 +239,7 @@
       <number>999999</number>
      </property>
     </widget>
-    <widget class="QSpinBox" name="spinBox_7">
+    <widget class="QSpinBox" name="sbTextH">
      <property name="geometry">
       <rect>
        <x>190</x>
@@ -252,7 +252,7 @@
       <number>999999</number>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_9">
+    <widget class="QPushButton" name="pbFontColorPicker">
      <property name="geometry">
       <rect>
        <x>540</x>
@@ -285,7 +285,7 @@
       <x>0</x>
       <y>230</y>
       <width>691</width>
-      <height>211</height>
+      <height>191</height>
      </rect>
     </property>
     <property name="title">
@@ -304,7 +304,7 @@
       <string>Texture (Enter):</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_3">
+    <widget class="QLineEdit" name="leTextureEnter">
      <property name="geometry">
       <rect>
        <x>110</x>
@@ -314,7 +314,7 @@
       </rect>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_3">
+    <widget class="QPushButton" name="pbTextureEnterBrowse">
      <property name="geometry">
       <rect>
        <x>540</x>
@@ -340,7 +340,7 @@
       <string>Texture (Clicking):</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_4">
+    <widget class="QLineEdit" name="leTextureClick">
      <property name="geometry">
       <rect>
        <x>120</x>
@@ -350,7 +350,7 @@
       </rect>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_4">
+    <widget class="QPushButton" name="pbTextureClickBrowse">
      <property name="geometry">
       <rect>
        <x>540</x>
@@ -376,7 +376,7 @@
       <string>Texture (Idle):</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_5">
+    <widget class="QLineEdit" name="leTextureIdle">
      <property name="geometry">
       <rect>
        <x>110</x>
@@ -386,7 +386,7 @@
       </rect>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_5">
+    <widget class="QPushButton" name="pbTextureIdleBrowse">
      <property name="geometry">
       <rect>
        <x>540</x>
@@ -412,7 +412,7 @@
       <string>Texture (Selected):</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_6">
+    <widget class="QLineEdit" name="leTextureSelect">
      <property name="geometry">
       <rect>
        <x>130</x>
@@ -422,7 +422,7 @@
       </rect>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_6">
+    <widget class="QPushButton" name="pbTextureSelectBrowse">
      <property name="geometry">
       <rect>
        <x>540</x>
@@ -445,10 +445,10 @@
       </rect>
      </property>
      <property name="text">
-      <string>Texture (Downr):</string>
+      <string>Texture (Down):</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_7">
+    <widget class="QLineEdit" name="leTextureDown">
      <property name="geometry">
       <rect>
        <x>120</x>
@@ -458,47 +458,11 @@
       </rect>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_7">
+    <widget class="QPushButton" name="pbTextureDownBrowse">
      <property name="geometry">
       <rect>
        <x>540</x>
        <y>140</y>
-       <width>93</width>
-       <height>28</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Browse</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_12">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>170</y>
-       <width>101</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Script:</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="lineEdit_8">
-     <property name="geometry">
-      <rect>
-       <x>110</x>
-       <y>170</y>
-       <width>401</width>
-       <height>22</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton_8">
-     <property name="geometry">
-      <rect>
-       <x>540</x>
-       <y>170</y>
        <width>93</width>
        <height>28</height>
       </rect>
@@ -512,15 +476,15 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>450</y>
-      <width>691</width>
+      <y>430</y>
+      <width>531</width>
       <height>91</height>
      </rect>
     </property>
     <property name="title">
      <string>General</string>
     </property>
-    <widget class="QCheckBox" name="checkBox">
+    <widget class="QCheckBox" name="cbWrite">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -533,7 +497,7 @@
       <string>Is writable!</string>
      </property>
     </widget>
-    <widget class="QCheckBox" name="checkBox_2">
+    <widget class="QCheckBox" name="cbType">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -546,6 +510,42 @@
       <string>Is a button!</string>
      </property>
     </widget>
+    <widget class="QLabel" name="label_14">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>20</y>
+       <width>55</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Name:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="leName">
+     <property name="geometry">
+      <rect>
+       <x>200</x>
+       <y>20</y>
+       <width>191</width>
+       <height>22</height>
+      </rect>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QPushButton" name="pbSave">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>470</y>
+      <width>131</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Build UI Element</string>
+    </property>
    </widget>
   </widget>
  </widget>
