--- a/Editor/Level_Designer/mainwindow.ui
+++ b/Editor/Level_Designer/mainwindow.ui
@@ -30,7 +30,7 @@
      <item row="0" column="0">
       <widget class="QTabWidget" name="twTabs">
        <property name="currentIndex">
-        <number>3</number>
+        <number>2</number>
        </property>
        <widget class="QWidget" name="tabGeneral">
         <attribute name="title">
@@ -328,7 +328,7 @@
            <rect>
             <x>20</x>
             <y>90</y>
-            <width>61</width>
+            <width>81</width>
             <height>16</height>
            </rect>
           </property>
@@ -339,7 +339,7 @@
          <widget class="QSpinBox" name="sbFrames">
           <property name="geometry">
            <rect>
-            <x>90</x>
+            <x>100</x>
             <y>90</y>
             <width>42</width>
             <height>22</height>
@@ -462,6 +462,9 @@
            </rect>
           </property>
           <property name="maximum">
+           <number>1</number>
+          </property>
+          <property name="value">
            <number>1</number>
           </property>
          </widget>
@@ -902,6 +905,9 @@
             <height>22</height>
            </rect>
           </property>
+          <property name="maximum">
+           <number>9999999</number>
+          </property>
          </widget>
          <widget class="QLabel" name="label_22">
           <property name="geometry">
@@ -925,6 +931,9 @@
             <height>22</height>
            </rect>
           </property>
+          <property name="maximum">
+           <number>999999</number>
+          </property>
          </widget>
          <widget class="QLabel" name="label_23">
           <property name="geometry">
@@ -947,6 +956,15 @@
             <width>51</width>
             <height>22</height>
            </rect>
+          </property>
+          <property name="maximum">
+           <double>1.000000000000000</double>
+          </property>
+          <property name="singleStep">
+           <double>0.010000000000000</double>
+          </property>
+          <property name="value">
+           <double>0.500000000000000</double>
           </property>
          </widget>
          <widget class="QCheckBox" name="cbUnmovable">
@@ -1005,6 +1023,9 @@
             <width>42</width>
             <height>22</height>
            </rect>
+          </property>
+          <property name="maximum">
+           <number>9999999</number>
           </property>
          </widget>
          <widget class="QLabel" name="label_25">
